--- a/Login.css
+++ b/Login.css
@@ -13,11 +13,11 @@
 body {
     /* background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
     background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%); */
-    background-image: url(797.jpg);
+    background-image: url(images/3d-rendering-futuristic-sci-fi-techno-lights-cool-background.jpg);
     background-color: #cccccc;
     background-attachment:local;
     background-repeat: no-repeat;
-
+    background-size: 100% 120%;
     font-family: 'Vibur', cursive;
 /*   the main font */
     font-family: 'Abel', sans-serif;
@@ -44,7 +44,8 @@ form {
     margin: 6% auto;
     box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
     padding: 2%;
-    background-image: linear-gradient(-225deg, #E3FDF5 50%, #FFE6FA 50%);
+    background-image: linear-gradient(-225deg, #e57641 50%, #5e3316 50%);
+    opacity: 0.9;
 }
 /* form Container */
 form .con {
